--- a/package.json
+++ b/package.json
@@ -67,12 +67,12 @@
     "ws": "^2.3.1"
   },
   "scripts": {
+    "build": "webpack -p --progress",
     "start": "webpack-dev-server",
     "start:dev": "webpack-dev-server",
     "stop": "pkill -9 -f npm & pkill -9 node & nginx -s stop",
     "webpack": "webpack -w --config webpack.config.dev.js",
     "serve": "nginx  -g 'daemon off;' -c `pwd`/nginx.conf -p `pwd`",
-    "build": "webpack --config webpack.config.prod.js",
     "test": "mocha -r jsdom-global/register --compilers js:babel-core/register test/**/*.spec.js 'test'"
   }
 }
