--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "ws": "^2.3.1"
   },
   "scripts": {
-    "start": "node server.js", // serves the application
-    "heroku-postbuild": "webpack -p", // runs after installation
+    "start": "node server.js",
+    "heroku-postbuild": "webpack -p",
     "build": "webpack -p --progress",
     "start:dev": "webpack-dev-server",
     "stop": "pkill -9 -f npm & pkill -9 node & nginx -s stop",
